Made CommenForm Component, Made Firebase post and get reviews

--- a/public/index.html
+++ b/public/index.html
@@ -14,5 +14,7 @@
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <script src="https://www.gstatic.com/firebasejs/6.2.3/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/6.2.3/firebase-storage.js"></script>
   </body>
 </html>
